# agent-flow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README_AgentFlow_マルチエージェントCS_EN.md  README_AgentFlow_マルチエージェントCS_JP.md  README_agent-flow_ai-agent-system_EN.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  start.sh
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  main.py
app/agents/: __init__.py  chitchat.py  escalation.py  faq.py  formatter.py  graph.py  llm.py  router.py  state.py  ticket.py
app/api/: auth.py  chat.py  conversations.py  deps.py  escalations.py  knowledge.py  stats.py  tickets.py
app/core/: logging.py  security.py
app/mcp/: server.py
app/models/: __init__.py  agent_run.py  conversation.py  escalation.py  knowledge.py  message.py  ticket.py  user.py
app/schemas/: auth.py  chat.py  conversation.py  escalation.py  knowledge.py  stats.py  ticket.py
app/services/: auth.py  embedding.py  knowledge.py
docs/: DESIGN_SPEC.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/constants/: colors.ts
frontend/src/hooks/: useAuth.ts  useSSE.ts
frontend/src/i18n/: config.ts  en.ts  ja.ts
frontend/src/pages/: AgentFlowPage.tsx  ChatPage.tsx  DashboardPage.tsx  EscalationsPage.tsx  KnowledgePage.tsx  (+3 more)
scripts/: seed.py
tests/: test_agents.py  test_config.py  test_embedding.py  test_schemas.py  test_security.py
(+1 files in other folders)
