[project]
name = "agent-flow"
version = "0.1.0"
description = "Multi-agent customer support platform with LangGraph + FastMCP + FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "fastmcp>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "structlog>=24.4",
    "httpx>=0.28",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
